# teaterarkivet

./: README.md  clientInterface_v2.py  main_old.py  main_old.py_old  pyproject.toml  serviceInterface_v2.py
.github/workflows/: tests.yml
source/: __init__.py  app.py  client.py  clientInterface.py  middleware.py  resources.py  routes.py  settings.py  utils.py  views.py
src/: __init__.py  app.py  middleware.py  settings.py  views.py
src/static/: robots.txt
src/static/favicons/: manifest.json
src/static/sass/: main.scss
src/templates/: about.html  base.html  login.html  message.html  page_contact.html  page_home.html  page_how-to-search.html  page_resource.html  page_resource_v3.html  test.html
src/templates/components/: filters.html  filters_v2.html  metadata-people--aarhusteater.html  metadata-records--aarhusteater.html  metadata-records--aarhusteater_v3.html
static/css/: style.css  style.css.map
static/js/: autocomplete.js  forms.js  relations.js  script.js  utilities.js
static/json/: structure.json  structure_new.json
static/sass/base/: _helpers.scss  _utilities.scss
static/sass/components/: README  _contactlist.scss  _form.scss  _iframe.scss  _image.scss  (+6 more)
templates/: base.html  info.html  message.html  page_collections.html  page_cookies.html  resource.html  search.html  test.html
templates/components/: facets_v2.html  form_resource.html  form_resource_v2.html  listitem_records--aarhusteater_v2.html  metadata-collections--aarhusteater.html  metadata-events--aarhusteater.html  relations--aarhusteater.html  searchbox.html  toolbox.html
(+22 files in other folders)
