[tool.poetry]
name = "YOUR_MODULE_NAME"
version = "0.1.0"
description = ""
authors = ["YOUR NAME <YOUR@EMAIL>"]
maintainers = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^2.11"
black = "^20.8b1"
flake8 = "^3.9.1"
mypy = "^0.812"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

