[tool.poetry]
name = "teaterarkivet"
version = "0.1.0"
description = ""
authors = ["Claus Juhl Knudsen <cjk@aarhus.dk>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.19.1"
itsdangerous = "^2.1.2"
requests = "^2.27.1"
Jinja2 = "^3.1.1"
uvicorn = "^0.17.6"
httpx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
